# fifa-fantasy-agent

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
data/: fixture_odds.yaml  overrides.yaml
docs/: ARCHITECTURE.md  DATA_AND_MODEL.md  MATCHDAY_ROUTINE.md  RUNBOOK.md  TUNING.md
src/fifa_fantasy/: __init__.py  cli.py  engine.py  graph.py  report.py  rules.py  scoring.py
src/fifa_fantasy/agent/: __init__.py  loop.py  tools.py
src/fifa_fantasy/ingest/: __init__.py  fifa.py  fixture_odds.py  odds.py  ratings.py  strength.py
src/fifa_fantasy/model/: __init__.py  expected_points.py  llm_adjust.py  opponent.py
src/fifa_fantasy/optimize/: __init__.py  squad.py  transfers.py
tests/: test_agent_loop.py  test_agent_tools.py  test_datasources.py  test_graph.py  test_ingest.py  test_optimize.py  test_rules.py  test_scoring.py
