[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fifa-fantasy-agent"
version = "0.1.0"
description = "Autonomous agent that picks and manages a FIFA World Cup 2026 Fantasy team"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pulp>=2.8,<4",   # 4.0 changes the LpVariable/solver API used in optimize/
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

# Optional capabilities — the deterministic core runs without any of these.
[project.optional-dependencies]
form = ["soccerdata>=1.8", "pandas>=2.0"]   # FBref recent-form ingestion (Phase 2)
ratings = ["soccerdata>=1.8", "pandas>=2.0"] # SoFIFA overall-ratings fetch (`fantasy fetch-ratings`)
llm = ["anthropic>=0.40"]                     # Claude adjustment layer (research subloop)
graph = ["langgraph>=0.2", "anthropic>=0.40"] # LangGraph state-machine orchestration (`fantasy run`)
dev = ["pytest>=8.0", "langgraph>=0.2"]


[project.scripts]
fantasy = "fifa_fantasy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fifa_fantasy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:pulp"]
